# qset-gen

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
docs/: sample_set.html  status.html
qset_gen/: cache.py  cli.py  config.py  models.py  notion_client.py
qset_gen/adapt/: weak_strong.py
qset_gen/render/: render.py  set_shell.html.j2
qset_gen/selection/: cold_start.py  constraints.py  scoring.py
qset_gen/session/: directives.py  extractor.py  ingest.py
qset_gen/webhook/: app.py  summary.py
rgprep/: cache.py  cli.py
rgprep/selection/: templates.py
rgprep/session/: extractor.py  ingest.py  prompt.py
rgprep/webhook/: app.py  auth.py
scripts/: build_demo_worksheet.py
templates/: act_math_full_60.toml  act_math_mixed_20.toml  act_math_post_session_15.toml  act_math_pre_test_30.toml
tests/: conftest.py  test_adapt.py  test_cache.py  test_cli_generate.py  test_cold_start.py  test_config.py  test_constraints.py  test_directives.py  test_ingest.py  test_models.py  test_render.py  test_scoring.py  test_session_extraction.py  test_templates.py  test_webhook.py
