[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rgprep-generator"
version = "0.1.0"
description = "Notion-backed personalized ACT/SAT homework generator with session-grounded scoring"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Ethan Rodgers-Gates", email = "erodgersgates@gmail.com" },
]
dependencies = [
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "notion-client>=2.2",
    "anthropic>=0.42",
    "jinja2>=3.1",
    "typer>=0.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
rgprep = "rgprep.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["rgprep"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
